--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,18 @@ isort = "^5.12.0"
 pytest = "^7.4.3"
 flake8 = "^6.1.0"
 black = "^23.10.1"
+mypy = "^1.6.1"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.mypy]
+python_version = 3.11
+strict = true
+pretty = true
+disallow_any_explicit = false
+disallow_any_generics = false
+warn_unreachable = true
+show_column_numbers = true
+show_error_context = true
