--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,13 @@ mypy = "^1.6.1"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.pytest.ini_options]
+pythonpath = [".", "src"]
+filterwarnings = [
+    "error",
+    "ignore::DeprecationWarning",
+]
+
 [tool.mypy]
 python_version = 3.11
 strict = true
