--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ python = "^3.11"
 fastapi = "^0.104.1"
 uvicorn = "^0.24.0"
 httpx = "^0.25.1"
+sqlalchemy = "^2.0.23"
+alembic = "^1.12.1"
+asyncpg = "^0.29.0"
+pydantic-settings = "^2.0.3"
+envparse = "^0.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
